--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -1,11 +1,8 @@
 /*kuaidi_css add by wwj 2014-10-10*/
 /*布局*/
-::-webkit-scrollbar {width:8px}
-::-webkit-scrollbar-thumb {background:#bbbbbb;background:rgba(0,0,0,0.15);border-radius:5px}
-::-webkit-scrollbar-track {background:#dddddd;background:rgba(0,0,0,0.05)}
 .w-sec{background:url(../images/login-blurry-bg.jpg) no-repeat center top #0099ff}
-.w-warp{background-color: #fff;border: 1px solid #ddd;border-top:0;border-bottom: 0;box-shadow: 0 1px 3px rgba(198,198,198,0.5);-webkit-box-shadow: 0 1px 3px rgba(198,198,198,0.5);-moz-box-shadow: 0 1px 3px rgba(198,198,198,0.5);height:978px;overflow-y:auto}
-.w-title{font-size: 60px;text-align: center;padding-top: 50px}.w-warp p{margin-top:20px}
+.w-wrap{background-color: #fff;border: 1px solid #ddd;border-top:0;border-bottom: 0;box-shadow: 0 1px 3px rgba(198,198,198,0.5);-webkit-box-shadow: 0 1px 3px rgba(198,198,198,0.5);-moz-box-shadow: 0 1px 3px rgba(198,198,198,0.5);height:978px;overflow-y:auto}
+.w-title{font-size: 60px;text-align: center;padding-top: 50px}.w-wrap p{margin-top:20px}
 .w-input{padding: 9px 8px;width: 464px;height: 24px;line-height: 24px;font-size: 16px;border: 1px solid #448ef3}
 .w-input-btn{padding: 0px 20px;cursor: pointer}
 .inp-metro{padding:9px 8px;width:464px;height:24px;line-height:24px;font-size:16px;border:1px solid #448ef3}
@@ -33,11 +30,11 @@
 .result-info .status-check{background-position: -150px center}
 .result-info .status-wait{background-position: -100px center}
 /*阴影层*/
-.w-mask{display:none;position:absolute;top:0;left:0;width:100%;height:100%;z-index:10000;background:url(../images/login-blurry-bg.jpg) repeat center top #0099ff}
-.w-mask-body{display:none;position:fixed;z-index:10001;top:50%;height:100%;margin-top:-300px;left:50%;width:1000px;margin-left: -500px;_position:absolute;_bottom:auto;_top:expression(eval(document.documentElement.scrollTop+document.documentElement.clientHeight-this.offsetHeight-(parseInt(this.currentStyle.marginTop,10)||0)-(parseInt(this.currentStyle.marginBottom,10)||0)));_margin-bottom:0px}
-.w-mask-box{position:relative;height:600px;top:50%;margin-top:-300px;overflow:auto;overflow-x:hidden;background-color:#fff;box-shadow: 0 1px 3px rgba(198,198,198,0.5);-webkit-box-shadow: 0 1px 3px rgba(198,198,198,0.5);-moz-box-shadow: 0 1px 3px rgba(198,198,198,0.5);-ms-box-shadow: 0 1px 3px rgba(198,198,198,0.5);-o-box-shadow: 0 1px 3px rgba(198,198,198,0.5)}
-.w-mask-close{display:block;width:30px;height:30px;background-color:#fff;text-align:center;font:22px/30px Arial;color:#c00;position:absolute;top:50%;margin-top:-300px;right:-33px;border-radius:50%}
-.w-mask-close:hover{background-color:#c00;color:#fff}
+.mask-body{position:fixed;background:#edf0f2;z-index:100000;top:0;left:50%;margin-top:-300px;margin-left:-500px;_position:absolute;_bottom:auto;_top:expression(eval(document.documentElement.scrollTop+document.documentElement.clientHeight-this.offsetHeight-(parseInt(this.currentStyle.marginTop,10)||0)-(parseInt(this.currentStyle.marginBottom,10)||0)));_margin-bottom:0px}
+.mask-box{position:relative;width:1000px;height:600px;overflow:auto;overflow-x:hidden;background-color:#fff;box-shadow:0 1px 3px rgba(198,198,198,0.5);-webkit-box-shadow:0 1px 3px rgba(198,198,198,0.5);-moz-box-shadow:0 1px 3px rgba(198,198,198,0.5);-ms-box-shadow:0 1px 3px rgba(198,198,198,0.5);-o-box-shadow:0 1px 3px rgba(198,198,198,0.5)}
+.mask-close{display:block;width:30px;height:30px;background-color:#fff;text-align:center;font:22px/30px Arial;color:#c00;position:absolute;top:50%;margin-top:-300px;right:-33px;border-radius:50%}
+.mask-close:hover{background-color:#c00;color:#fff}
+.mask-bg{position:fixed;top:0;right:0;bottom:0;left:0;z-index:10040;background-color:#000}
 .column-1{float:left;width:475px;border-bottom:1px solid #e9eff6}
 .column-2{float:right;width:475px;border-bottom:1px solid #e9eff6}
 .column-list dl{float:left;width:100%;font-size:14px;background-color:#b9d5fd;border-right:1px solid #e9eff6}
