--- a/views/kuaidi/company.html
+++ b/views/kuaidi/company.html
@@ -5,8 +5,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="renderer" content="webkit">
 	<title>快递公司</title>
-	<link rel="stylesheet" href="stylesheets/common.css?v=1411887282" type="text/css" />
-	<link rel="stylesheet" href="stylesheets/index.css?v=1411887282" type="text/css" />
+	<link rel="stylesheet" href="../../stylesheets/common.css?v=1411887282" type="text/css" />
+	<link rel="stylesheet" href="../../stylesheets/kuaidi/index.css?v=1411887282" type="text/css" />
 	<style type="text/css">
 	.w-kd-item {opacity: .9;filter:alpha(opacity=90)}
 	.w-kd-item li{float: left;width:222px;height: 100px;overflow:auto;overflow-x:hidden;border: 1px solid #fff;margin:0 0 5px 5px;padding:10px;color:#000;background-color: #fff;text-shadow:-1px 0px 2px #ddd;}
@@ -19,8 +19,8 @@
 		<ul class="w-kd-item clearfix" id="w-kd-item"></ul>
 	</div>
 </section>
-<script type="text/javascript" src="javascripts/sea.js"></script>
-<script type="text/javascript" src="javascripts/sea_config.js"></script>
-<script type="text/javascript">seajs.use("index_company")</script>
+<script type="text/javascript" src="../../javascripts/sea.js"></script>
+<script type="text/javascript" src="../../javascripts/sea_config.js"></script>
+<script type="text/javascript">seajs.use("kuaidi_company")</script>
 </body>
 </html>
