update tool page
更新工具页面细节

--- a/views/tool/index.htm
+++ b/views/tool/index.htm
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
 <meta content="black" name="apple-mobile-web-app-status-bar-style">
 <title>bluesdog 前端工具箱</title>
+<link rel="shortcut icon" href="http://cdn-img.easyicon.net/favicon.ico" />
 <link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="css/lightbox.css">
 <style>
